--- a/frontend/src/container/Header/Header.css
+++ b/frontend/src/container/Header/Header.css
@@ -2,7 +2,6 @@
 
 .header {
   margin-top: 4rem;
-  overflow: hidden;
 }
 
 .code-text {
